fix: scrollbar global

--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,24 @@
+::-webkit-scrollbar {
+  width: 2px;
+  height: 2px;
+}
+
+::-webkit-scrollbar-thumb{
+  width: 2px;
+  height: 2px;
+	background-color: #aaa;
+}
+
+::-moz-selection {
+	color: #fff;
+	background: #3d74aa
+}
+
+::selection {
+	color: #fff;
+	background: #3d74aa
+}
+
 .ant-btn-primary {
   --btn-color: #3d74aa;
   color: #fff !important;
